fixed background colors and all styling and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@ body {
   font-size: 16px;
   line-height: 1;
 }
-
+main {
+  margin-bottom: 20px;
+}
 textarea{
   background: transparent;
   border: none;
@@ -23,6 +25,7 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  height: 100%;
 }
 
 .time-block{
@@ -32,14 +35,18 @@ textarea{
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;;
+  height: 100px;
+  border-top: 2px solid white;
+  display: flex;
+  justify-content: center;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  height: 100%;
+  margin-left: 5px;
 }
 
 .past {
@@ -63,9 +70,21 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+h2 {
+  font-size: 20px;
+  padding: 25px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
